Refactor to allow empty list, but does not allow null items.