@@ -1,54 +1,56 @@
 package hashtools.generator.condition;
 
 import hashtools.shared.Algorithm;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class AlgorithmSelectionIsValidConditionTest {
 
-    @Test
-    void isFalseReturnsFalseWhenListIsValid() {
-        assertFalse(
-            new AlgorithmSelectionIsValidCondition(List.of(Algorithm.MD5)).isFalse()
+    static Stream<Arguments> getFalseTests() {
+        return Stream.of(
+            Arguments.of(false, List.of(Algorithm.MD5)),
+            Arguments.of(false, List.of(Algorithm.MD5, Algorithm.SHA1)),
+            Arguments.of(false, List.of()),
+            Arguments.of(true, null),
+            Arguments.of(true, Collections.singletonList(null)),
+            Arguments.of(true, Arrays.asList(Algorithm.MD5, null))
         );
     }
 
-    @Test
-    void isFalseReturnsTrueWhenListIsEmpty() {
-        assertTrue(
-            new AlgorithmSelectionIsValidCondition(List.of()).isFalse()
+    static Stream<Arguments> getTrueTests() {
+        return Stream.of(
+            Arguments.of(true, List.of(Algorithm.MD5)),
+            Arguments.of(true, List.of(Algorithm.MD5, Algorithm.SHA1)),
+            Arguments.of(true, List.of()),
+            Arguments.of(false, null),
+            Arguments.of(false, Collections.singletonList(null)),
+            Arguments.of(false, Arrays.asList(Algorithm.MD5, null))
         );
     }
 
-    @Test
-    void isFalseReturnsTrueWhenListIsNull() {
-        assertTrue(
-            new AlgorithmSelectionIsValidCondition(null).isFalse()
+    @ParameterizedTest
+    @MethodSource("getFalseTests")
+    void isFalse(boolean expected, List<Algorithm> algorithms) {
+        assertEquals(
+            expected,
+            new AlgorithmSelectionIsValidCondition(algorithms).isFalse()
         );
     }
 
-    @Test
-    void isTrueReturnsFalseWhenListIsEmpty() {
-        assertFalse(
-            new AlgorithmSelectionIsValidCondition(List.of()).isTrue()
-        );
-    }
-
-    @Test
-    void isTrueReturnsFalseWhenListIsNull() {
-        assertFalse(
-            new AlgorithmSelectionIsValidCondition(null).isTrue()
-        );
-    }
-
-    @Test
-    void isTrueReturnsTrueWhenListIsValid() {
-        assertTrue(
-            new AlgorithmSelectionIsValidCondition(List.of(Algorithm.MD5)).isTrue()
+    @ParameterizedTest
+    @MethodSource("getTrueTests")
+    void isTrue(boolean expected, List<Algorithm> algorithms) {
+        assertEquals(
+            expected,
+            new AlgorithmSelectionIsValidCondition(algorithms).isTrue()
         );
     }
 }
